update tic badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ Package website: [release](https://mlrmbo.mlr-org.com/) | [dev](https://mlr3mbo.
 Model-based optimization with [mlr](https://github.com/mlr-org/mlr/).
 
 <!-- badges: start -->
-[![R CMD Check via {tic}](https://github.com/mlr-org/mlrMBO/workflows/R%20CMD%20Check%20via%20{tic}/badge.svg?branch=master)](https://github.com/mlr-org/mlrMBO/actions)
+[![tic](https://github.com/mlr-org/mlrMBO/workflows/tic/badge.svg?branch=master)](https://github.com/mlr-org/mlrMBO/actions)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/mlrMBO)](https://cran.r-project.org/package=mlrMBO)
 [![Travis build status](https://img.shields.io/travis/mlr-org/mlrMBO/master?logo=travis&style=flat-square&label=Linux)](https://travis-ci.org/mlr-org/mlrMBO)
 [![AppVeyor build status](https://img.shields.io/appveyor/ci/mlr-org/mlrMBO?label=Windows&logo=appveyor&style=flat-square)](https://ci.appveyor.com/project/mlr-org/mlrMBO)
